--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,6 @@ jobs:
         with:
           python-version: '3.12'
 
-      # Linux needs Tk headers for the bundled GUI
       - name: Install Tk on Linux
         if: runner.os == 'Linux'
         run: sudo apt-get update && sudo apt-get install -y python3-tk
@@ -26,42 +25,53 @@ jobs:
       - name: Install PyInstaller
         run: python -m pip install --upgrade pip pyinstaller
 
-      - name: Build with PyInstaller
-        run: |
-          case "${{ runner.os }}" in
-            "macOS")
-              ICON=""; [ -f assets/icon.icns ] && ICON="--icon assets/icon.icns"
-              python -m PyInstaller --windowed $ICON --name "Unity WebGL Server" UnityWebGLServer.py
-              ;;
-            "Windows")
-              ICON=""; [ -f assets/icon.ico ] && ICON="--icon assets/icon.ico"
-              python -m PyInstaller --noconsole $ICON --name "Unity WebGL Server" UnityWebGLServer.py
-              ;;
-            "Linux")
-              ICON=""; [ -f assets/icon.png ] && ICON="--icon assets/icon.png"
-              python -m PyInstaller --noconsole $ICON --name "unity-webgl-server" UnityWebGLServer.py
-              ;;
-          esac
-
-      - name: Package artifact
+      # ---- Build per OS ----
+      - name: Build macOS app
+        if: runner.os == 'macOS'
         shell: bash
         run: |
-          set -e
-          OS="${{ runner.os }}"
-          ARCH="${{ runner.arch }}"     # X64 or ARM64 on macOS/Windows; X64 on Ubuntu runners
-          mkdir -p release
+          ICON=""
+          [ -f assets/icon.icns ] && ICON="--icon assets/icon.icns"
+          python -m PyInstaller --windowed $ICON --name "Unity WebGL Server" UnityWebGLServer.py
 
-          if [ "$OS" = "macOS" ]; then
-            APP="dist/Unity WebGL Server.app"
-            # Zip preserving app bundle metadata
-            ditto -c -k --sequesterRsrc --keepParent "$APP" "release/Unity-WebGL-Server-macOS-${ARCH}.zip"
-          elif [ "$OS" = "Windows" ]; then
-            # Use PowerShell to zip the folder containing the EXE
-            pwsh -Command 'Compress-Archive -Path "dist/Unity WebGL Server/*" -DestinationPath "release/Unity-WebGL-Server-windows-${{ runner.arch }}.zip" -Force'
-          else
-            # Linux: tar.gz the output directory
-            tar -czf "release/unity-webgl-server-linux-${ARCH}.tar.gz" -C dist unity-webgl-server
-          fi
+      - name: Build Windows app
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          $icon = (Test-Path 'assets\icon.ico') ? '--icon assets\icon.ico' : ''
+          python -m PyInstaller --noconsole $icon --name "Unity WebGL Server" UnityWebGLServer.py
+
+      - name: Build Linux app
+        if: runner.os == 'Linux'
+        shell: bash
+        run: |
+          ICON=""
+          [ -f assets/icon.png ] && ICON="--icon assets/icon.png"
+          python -m PyInstaller --noconsole $ICON --name "unity-webgl-server" UnityWebGLServer.py
+
+      # ---- Package per OS ----
+      - name: Package macOS (.zip)
+        if: runner.os == 'macOS'
+        shell: bash
+        run: |
+          mkdir -p release
+          ditto -c -k --sequesterRsrc --keepParent "dist/Unity WebGL Server.app" \
+            "release/Unity-WebGL-Server-macOS-${{ runner.arch }}.zip"
+
+      - name: Package Windows (.zip)
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          New-Item -ItemType Directory -Force -Path release | Out-Null
+          Compress-Archive -Path 'dist/Unity WebGL Server/*' `
+            -DestinationPath "release/Unity-WebGL-Server-windows-${{ runner.arch }}.zip" -Force
+
+      - name: Package Linux (tar.gz)
+        if: runner.os == 'Linux'
+        shell: bash
+        run: |
+          mkdir -p release
+          tar -czf "release/unity-webgl-server-linux-${{ runner.arch }}.tar.gz" -C dist unity-webgl-server
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
